--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -54,6 +54,17 @@ jobs:
           # Find all csproj files matching the pattern recursively
           PROJECTS=$(find test -name "Dapr.IntegrationTest.*.csproj" | jq -R -s -c 'split("\n")[:-1]')
           echo "matrix=$PROJECTS" >> $GITHUB_OUTPUT
+  discover-unit-test-projects:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v1
+      - id: set-matrix
+        run: |
+          # Find all csproj files matching the pattern recursively
+          PROJECTS=$(find test -name "Dapr.*.Test.csproj" ! -name "*E2E*" | jq -R -s -c 'split("\n")[:-1]')
+          echo "matrix=$PROJECTS" >> $GITHUB_OUTPUT
   integration-tests-v2:
     name: Integration Tests ${{ matrix.display-name }} / ${{ matrix.os }} - ${{ matrix.project}}
     needs: discover-integration-v2-tests
@@ -108,17 +119,6 @@ jobs:
         with:
           TRX_PATH: ${{ github.workspace }}/TestResults
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  discover-unit-test-projects:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - uses: actions/checkout@v1
-      - id: set-matrix
-        run: |
-          # Find all csproj files matching the pattern recursively
-          PROJECTS=$(find test -name "Dapr.*.Test.csproj" | jq -R -s -c 'split("\n")[:-1]')
-          echo "matrix=$PROJECTS" >> $GITHUB_OUTPUT
   unit-tests:
     needs: discover-unit-test-projects
     runs-on: ubuntu-latest
