--- a/test/Dapr.IntegrationTest.Workflow/Dapr.IntegrationTest.Workflow.csproj
+++ b/test/Dapr.IntegrationTest.Workflow/Dapr.IntegrationTest.Workflow.csproj
@@ -19,7 +19,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
+      <ProjectReference Include="..\..\src\Dapr.Client\Dapr.Client.csproj" />
       <ProjectReference Include="..\..\src\Dapr.TestContainers\Dapr.TestContainers.csproj" />
+      <ProjectReference Include="..\..\src\Dapr.Workflow.Abstractions\Dapr.Workflow.Abstractions.csproj" />
       <ProjectReference Include="..\..\src\Dapr.Workflow\Dapr.Workflow.csproj" />
     </ItemGroup>
 
