Providing a name for the unit test build job so the broader collection can be referenced by ID in the merge restriction rules
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -120,6 +120,7 @@ jobs:
           TRX_PATH: ${{ github.workspace }}/TestResults
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   unit-tests:
+    name: Unit Tests ${{ matrix.display-name }} / ${{ matrix.os }} - ${{ matrix.project}}
     needs: discover-unit-test-projects
     runs-on: ubuntu-latest
     strategy:
