--- a/test/Dapr.IntegrationTest.Workflow/Dapr.IntegrationTest.Workflow.csproj
+++ b/test/Dapr.IntegrationTest.Workflow/Dapr.IntegrationTest.Workflow.csproj
@@ -16,6 +16,9 @@
 
     <ItemGroup>
         <Using Include="Xunit"/>
+        <None Update="xunit.runner.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
