--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -72,7 +72,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        dotnet-version: [ '8.0', '9.0' ]
+        dotnet-version: [ '8.0', '9.0', '10.0' ]
         os: [ubuntu-latest]
         project: ${{ fromJson(needs.discover-integration-v2-tests.outputs.matrix) }}
         include:
@@ -86,6 +86,11 @@ jobs:
             framework: 'net9'
             prefix: 'net9'
             install-version: '9.0.x'
+          - dotnet-version: '10.0'
+            display-name: '.NET 10.0'
+            framework: 'net10'
+            prefix: 'net10'
+            install-version: '10.0.x'
     steps:
       - uses: actions/checkout@v1
       - name: Parse release version
@@ -133,7 +138,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        dotnet-version: ['8.0', '9.0']
+        dotnet-version: ['8.0', '9.0', '10.0']
         project: ${{ fromJson(needs.discover-unit-test-projects.outputs.matrix) }}
         include:
         - dotnet-version: '8.0'
@@ -146,6 +151,11 @@ jobs:
           framework: 'net9'
           prefix: 'net9'
           install-version: '9.0.x'
+        - dotnet-version: '10.0'
+          display-name: '.NET 10.0'
+          framework: 'net10'
+          prefix: 'net10'
+          install-version: '10.0.x'
     steps:
     - uses: actions/checkout@v1
     - name: Parse release version
