--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -10,26 +10,31 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        dotnet-version: ['8.0', '9.0']
+        dotnet-version: ['8.0', '9.0', '10.0']
         include:
         - dotnet-version: '8.0'
           display-name: '.NET 8.0'
-          framework: 'net8'
+          framework: 'net8.0'
           prefix: 'net8'
           install-version: '8.0.x'
         - dotnet-version: '9.0'
           display-name: '.NET 9.0'
-          framework: 'net9'
+          framework: 'net9.0'
           prefix: 'net9'
           install-version: '9.0.x'
+        - dotnet-version: '10.0'
+          display-name: '.NET 10.0'
+          framework: 'net10.0'
+          prefix: 'net10'
+          install-version: '10.0.x'
     env:
       NUPKG_OUTDIR: bin/Release/nugets
       GOVER: 1.20.3
       GOOS: linux
       GOARCH: amd64
       GOPROXY: https://proxy.golang.org
-      DAPR_CLI_VER: 1.15.2
-      DAPR_RUNTIME_VER: 1.16.0-rc.6
+      DAPR_CLI_VER: 1.16.3
+      DAPR_RUNTIME_VER: 1.16.6
       DAPR_INSTALL_URL: https://raw.githubusercontent.com/dapr/cli/release-1.16/install/install.sh
       DAPR_CLI_REF: ''
     steps:
@@ -103,6 +108,12 @@ jobs:
         if: ${{ matrix.install-version != '9.0.x' }}
         with:
           dotnet-version: '9.0.x'
+          dotnet-quality: 'ga'
+      - name: Setup .NET 10 (required)
+        uses: actions/setup-dotnet@v3
+        if: ${{ matrix.install-version != '10.0.x' }}
+        with:
+          dotnet-version: '10.0.x'
           dotnet-quality: 'ga'
       - name: Restore dependencies
         run: dotnet restore
