--- a/test/Dapr.Workflow.Test/Dapr.Workflow.Test.csproj
+++ b/test/Dapr.Workflow.Test/Dapr.Workflow.Test.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="coverlet.collector" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
+        <PackageReference Include="Shouldly" />
         <PackageReference Include="xunit" />
         <PackageReference Include="xunit.extensibility.core" />
         <PackageReference Include="xunit.runner.visualstudio">
