Moved clean argument to correct workflow section
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -20,13 +20,11 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
-    clean:
-      true
     env:
       NUPKG_OUTDIR: bin/Release/nugets
     steps:
       - uses: actions/checkout@v1
+        clean: true
       - name: Parse release version
         run: python ./.github/scripts/get_release_version.py
       - name: Setup .NET Core
